FIX: hero section alignment

--- a/styles/queries.css
+++ b/styles/queries.css
@@ -93,10 +93,13 @@
     html {
         font-size: 50%
     }
+
     .hero {
-        grid-template-columns: 1fr;
-        padding: 0 8rem;
-        gap: 0.8rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 0 8rem;
+      gap: 4rem;
     }
 
     .hero-soc-greet {
@@ -117,7 +120,7 @@
     }
 
     .hero-img {
-        width: 40%
+        width: 60%
     }
 
     .cta {
@@ -223,7 +226,17 @@
 }
 
 @media (max-width: 44em) {
+    .hero {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 0 8rem;
+      gap: 4rem;
+    }
 
+    .hero-img {
+      width: 70%;
+    }
 
     .grid--4-cols {
         grid-template-columns: repeat(2, 1fr);
@@ -265,12 +278,16 @@
         padding: 2.4rem 0 6.4rem 0;
       }
     
-      .hero {
-        padding: 0 3.2rem;
-      }
+    .hero {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 0 8rem;
+      gap: 4rem;
+    }
     
       .hero-img {
-        width: 80%;
+        width: 60%;
       }
     
       .btn--full:link,
